--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,6 @@
   color: var(--black);
   background: #f3f3f3;
   padding: 1rem 1rem;
-  
 }
 
 .blur{
@@ -28,19 +27,18 @@
   height: 14rem;
   border-radius: 50%;
   background: #a6ddf0;
-  filter: blur(72px);
+  filter: blur(72px)
 }
-
 
 .button{
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
-  border: none;
+  border:none;
   border-radius: 0.5rem;
   background: var(--buttonBg);
-  transition: all 100ms ease-out;
+  transition:all 100ms ease-out;
 }
 
 .button:hover{
