--- a/src/components/FollowersCard/FollowersCard.css
+++ b/src/components/FollowersCard/FollowersCard.css
@@ -1,4 +1,5 @@
-.FollowerCard{
+
+.FollowersCard{
     width: 100%;
     border-radius: 0.7rem;
     gap: 1rem;
@@ -18,6 +19,7 @@
     gap: 10px;
 }
 
+
 .followerImage{
     width: 3.2rem;
     height: 3.2rem;
@@ -35,8 +37,14 @@
     font-weight: bold;
 }
 
+
 .fc-button{
-    height:2rem;
+    height: 2rem;
     padding-left: 20px;
     padding-right: 20px;
 }
+
+
+
+
+
