--- a/src/components/InfoCard/InfoCard.css
+++ b/src/components/InfoCard/InfoCard.css
@@ -1,4 +1,5 @@
-.InfoCard{
+.InfoCard
+{
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
@@ -8,14 +9,13 @@
     width: 90%;
 }
 
-
-.InfoHead{
+.infoHead{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.InfoHead>div:hover{
+.infoHead>div:hover{
     cursor: pointer;
 }
 
