--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -1,4 +1,5 @@
-.Post{
+.Post
+{
     display: flex;
     flex-direction: column;
     padding: 1rem;
@@ -14,7 +15,7 @@
     border-radius: 0.5rem;
 }
 
-.PostReact{
+.postReact{
     display: flex;
     align-items: flex-start;
     gap: 1.5rem;
