--- a/src/components/PostShare/PostShare.css
+++ b/src/components/PostShare/PostShare.css
@@ -28,12 +28,16 @@
     outline: none;
 }
 
-.PostOptions{
+
+
+
+
+.postOptions{
     display: flex;
     justify-content: space-around;
 }
 
-.Option{
+.option{
     padding: 5px;
     padding-left: 10px;
     padding-right: 10px;
@@ -44,33 +48,34 @@
     font-size: 12px;
 }
 
-
-.Option:hover{
+.option:hover{
     cursor: pointer;
-
 }
 
 .ps-button{
     padding: 5px;
     padding-left: 20px;
     padding-right: 20px;
-    font-size: 12px;
+    font-size: 12px
 }
 
-.PreviewImage{
+
+.previewImage{
     position: relative;
 }
 
-.PreviewImage>svg{
+.previewImage>svg{
     position: absolute;
     right: 1rem;
     top: 0.5rem;
     cursor: pointer;
 }
 
-.PreviewImage>img{
+.previewImage>img{
     width: 100%;
     max-height: 20rem;
     object-fit: cover;
     border-radius: 0.5rem;
 }
+
+
