--- a/src/components/RightSide/RightSide.css
+++ b/src/components/RightSide/RightSide.css
@@ -4,16 +4,19 @@
     gap: 2rem;
 }
 
-.NavIcons{
+
+.navIcons{
     margin-top: 1rem;
     display: flex;
     justify-content: space-between;
 }
 
-.NavIcons>img{
+
+.navIcons>img{
     width: 1.5rem;
     height: 1.5rem;
 }
+
 
 .r-button{
     height: 3rem;
