--- a/src/components/TrendCard/TrendCard.css
+++ b/src/components/TrendCard/TrendCard.css
@@ -8,16 +8,19 @@
     padding-left: 2rem;
 }
 
-.Trend{
+
+.trend{
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
 }
 
-.Trend>span:nth-of-type(1){
+
+.trend>span:nth-of-type(1)
+{
     font-weight: bold;
 }
-
-.Trend>span:nth-of-type(1){
+.trend>span:nth-of-type(2)
+{
     font-size: 13px;
 }
